--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@angular/compiler": "11.2.5",
     "@angular/core": "11.2.5",
     "@angular/forms": "11.2.5",
+    "@angular/localize": "11.2.5",
     "@angular/platform-browser": "11.2.5",
     "@angular/platform-browser-dynamic": "11.2.5",
     "@angular/router": "11.2.5",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@ngmodule/material-carousel": "^0.6.0",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "2.9.4",
+    "ngx-useful-swiper": "^10.0.1",
     "rxjs": "6.6.6",
+    "swiper": "^8.0.7",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
     "zone.js": "0.11.4"
