--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "notus-angular",
   "version": "1.1.0",
   "description": "Notus Angular - Free Tailwind CSS UI Kit and Admin by Creative Tim.",
-  "repository": "https://github.com/creativetimofficial/notus-angular",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/creativetimofficial/notus-angular.git"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -15,18 +18,22 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start"
   },
   "dependencies": {
-    "@angular/animations": "11.2.5",
-    "@angular/common": "11.2.5",
-    "@angular/compiler": "11.2.5",
-    "@angular/core": "11.2.5",
-    "@angular/forms": "11.2.5",
-    "@angular/platform-browser": "11.2.5",
-    "@angular/platform-browser-dynamic": "11.2.5",
-    "@angular/router": "11.2.5",
+    "@angular/animations": "12.2.16",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
+    "@ckeditor/ckeditor5-angular": "^3.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^33.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "ckeditor4-angular": "^3.0.0",
     "rxjs": "6.6.6",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
@@ -34,9 +41,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1102.4",
-    "@angular/cli": "11.2.4",
-    "@angular/compiler-cli": "11.2.5",
-    "@angular/language-service": "11.2.5",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
+    "@ckeditor/ckeditor5-alignment": "^34.0.0",
     "@types/jasmine": "3.6.6",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.14.35",
@@ -51,6 +59,12 @@
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.1.5"
-  }
+    "typescript": "4.3.5"
+  },
+  "bugs": {
+    "url": "https://github.com/creativetimofficial/notus-angular/issues"
+  },
+  "homepage": "https://github.com/creativetimofficial/notus-angular#readme",
+  "main": "karma.conf.js",
+  "author": ""
 }
