--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
                         "styles": [
                             "src/assets/styles/tailwind.css",
                             "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-                            "src/styles.css"
+                            "src/styles.css",
+                            "./node_modules/@fullcalendar/core",
+                            "./node_modules/@fullcalendar/daygrid"
                         ],
                         "scripts": []
                     },
