--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@angular/platform-browser-dynamic": "11.2.5",
     "@angular/router": "11.2.5",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ngmodule/material-carousel": "^0.6.0",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "bootstrap": "^5.1.3",
     "chart.js": "2.9.4",
+    "ngx-doughnut-chart": "0.0.4",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "6.6.6",
     "swiper": "^8.0.7",
