--- a/package.json
+++ b/package.json
@@ -18,22 +18,18 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start"
   },
   "dependencies": {
-    "@angular/animations": "12.2.16",
-    "@angular/common": "12.2.16",
-    "@angular/compiler": "12.2.16",
-    "@angular/core": "12.2.16",
-    "@angular/forms": "12.2.16",
-    "@angular/platform-browser": "12.2.16",
-    "@angular/platform-browser-dynamic": "12.2.16",
-    "@angular/router": "12.2.16",
-    "@ckeditor/ckeditor5-angular": "^3.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^33.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^33.0.0",
+    "@angular/animations": "11.2.5",
+    "@angular/common": "11.2.5",
+    "@angular/compiler": "11.2.5",
+    "@angular/core": "11.2.5",
+    "@angular/forms": "11.2.5",
+    "@angular/platform-browser": "11.2.5",
+    "@angular/platform-browser-dynamic": "11.2.5",
+    "@angular/router": "11.2.5",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
-    "ckeditor4-angular": "^3.0.0",
     "rxjs": "6.6.6",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
@@ -41,10 +37,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1102.4",
-    "@angular/cli": "^12.2.17",
-    "@angular/compiler-cli": "12.2.16",
-    "@angular/language-service": "12.2.16",
-    "@ckeditor/ckeditor5-alignment": "^34.0.0",
+    "@angular/cli": "11.2.4",
+    "@angular/compiler-cli": "11.2.5",
+    "@angular/language-service": "11.2.5",
     "@types/jasmine": "3.6.6",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.14.35",
@@ -59,7 +54,7 @@
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.1.5"
   },
   "bugs": {
     "url": "https://github.com/creativetimofficial/notus-angular/issues"
