--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
     "ckeditor4-angular": "^3.0.0",
+    "ng-multiselect-dropdown": "^0.3.8",
     "rxjs": "6.6.6",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
