--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/compiler": "11.2.5",
     "@angular/core": "11.2.5",
     "@angular/forms": "11.2.5",
-    "@angular/localize": "11.2.5",
     "@angular/platform-browser": "11.2.5",
     "@angular/platform-browser-dynamic": "11.2.5",
     "@angular/router": "11.2.5",
@@ -43,6 +42,7 @@
     "@angular/cli": "11.2.4",
     "@angular/compiler-cli": "11.2.5",
     "@angular/language-service": "11.2.5",
+    "@angular/localize": "^11.2.5",
     "@types/jasmine": "3.6.6",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.14.35",
