--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
         "@fullcalendar/angular": "^5.11.0",
         "@fullcalendar/daygrid": "^5.11.0",
         "@fullcalendar/interaction": "^5.11.0",
+        "@ng-bootstrap/ng-bootstrap": "^12.0.2",
         "@popperjs/core": "2.9.1",
         "@tailwindcss/forms": "0.2.1",
+        "angular-calendar": "^0.29.0",
+        "angularx-flatpickr": "^6.6.0",
         "chart.js": "2.9.4",
+        "date-fns": "^2.23.0",
+        "flatpickr": "^4.6.13",
         "fullcalendar": "^5.11.0",
         "ngx-doughnut-chart": "0.0.4",
         "rxjs": "6.6.6",
